DBC22-5029: Fixed z-index for location dropdown

--- a/src/frontend/src/Components/map/Map.scss
+++ b/src/frontend/src/Components/map/Map.scss
@@ -71,7 +71,7 @@
       display: flex;
       flex-direction: column;
       position: relative;
-      z-index: 10;
+      z-index: 4;
 
       &:not(.has-route) {
         transform: translateX(0%);
@@ -450,7 +450,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1001;
+  z-index: 1;
   height: 100%;
   
   .drawer-drag-handle {
